// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-meter should render with _label="Label" _max=1 _min=0 _value=0 1`] = `
<kol-meter>
  <template shadowrootmode="open">
    <div class="kol-meter">
      <div class="kol-meter__bar">
        <div class="kol-meter__bar-label">
          Label
        </div>
        <div aria-label="Label" aria-valuemax="1" aria-valuemin="0" aria-valuenow="0" aria-valuetext="kol-live-value" class="kol-meter__bar-track" role="meter">
          <meter aria-hidden="true" max="1" min="0" value="0"></meter>
        </div>
        <span class="kol-meter__value-unit">
          <span class="kol-meter__value" style="min-width: 1ch;">
            0
          </span>
          <span class="kol-meter__unit">
            %
          </span>
        </span>
      </div>
      <span aria-live="polite" aria-relevant="additions text" class="visually-hidden">
        kol-live-value
      </span>
    </div>
  </template>
</kol-meter>
`;

exports[`kol-meter should render with _label="Label" _max=1 _min=0 _value=0.5 1`] = `
<kol-meter>
  <template shadowrootmode="open">
    <div class="kol-meter">
      <div class="kol-meter__bar">
        <div class="kol-meter__bar-label">
          Label
        </div>
        <div aria-label="Label" aria-valuemax="1" aria-valuemin="0" aria-valuenow="0.5" aria-valuetext="kol-live-value" class="kol-meter__bar-track" role="meter">
          <meter aria-hidden="true" max="1" min="0" value="0.5"></meter>
        </div>
        <span class="kol-meter__value-unit">
          <span class="kol-meter__value" style="min-width: 1ch;">
            50
          </span>
          <span class="kol-meter__unit">
            %
          </span>
        </span>
      </div>
      <span aria-live="polite" aria-relevant="additions text" class="visually-hidden">
        kol-live-value
      </span>
    </div>
  </template>
</kol-meter>
`;

exports[`kol-meter should render with _label="Label" _max=1 _min=0 _value=1 1`] = `
<kol-meter>
  <template shadowrootmode="open">
    <div class="kol-meter">
      <div class="kol-meter__bar">
        <div class="kol-meter__bar-label">
          Label
        </div>
        <div aria-label="Label" aria-valuemax="1" aria-valuemin="0" aria-valuenow="1" aria-valuetext="kol-live-value" class="kol-meter__bar-track" role="meter">
          <meter aria-hidden="true" max="1" min="0" value="1"></meter>
        </div>
        <span class="kol-meter__value-unit">
          <span class="kol-meter__value" style="min-width: 1ch;">
            100
          </span>
          <span class="kol-meter__unit">
            %
          </span>
        </span>
      </div>
      <span aria-live="polite" aria-relevant="additions text" class="visually-hidden">
        kol-live-value
      </span>
    </div>
  </template>
</kol-meter>
`;

exports[`kol-meter should render with _label="Label" _max=42 _value=21 _unit="kg" 1`] = `
<kol-meter>
  <template shadowrootmode="open">
    <div class="kol-meter">
      <div class="kol-meter__bar">
        <div class="kol-meter__bar-label">
          Label
        </div>
        <div aria-label="Label" aria-valuemax="42" aria-valuemin="0" aria-valuenow="21" aria-valuetext="kol-live-value-bounded" class="kol-meter__bar-track" role="meter">
          <meter aria-hidden="true" max="42" min="0" value="21"></meter>
        </div>
        <span class="kol-meter__value-unit">
          <span class="kol-meter__value" style="min-width: 2ch;">
            21
          </span>
          <span class="kol-meter__unit">
            kg
          </span>
        </span>
      </div>
      <span aria-live="polite" aria-relevant="additions text" class="visually-hidden">
        kol-live-value-bounded
      </span>
    </div>
  </template>
</kol-meter>
`;

exports[`kol-meter should render with _label="Label" _max=100 _value=0 1`] = `
<kol-meter>
  <template shadowrootmode="open">
    <div class="kol-meter">
      <div class="kol-meter__bar">
        <div class="kol-meter__bar-label">
          Label
        </div>
        <div aria-label="Label" aria-valuemax="100" aria-valuemin="0" aria-valuenow="0" aria-valuetext="kol-live-value" class="kol-meter__bar-track" role="meter">
          <meter aria-hidden="true" max="100" min="0" value="0"></meter>
        </div>
        <span class="kol-meter__value-unit">
          <span class="kol-meter__value" style="min-width: 3ch;">
            0
          </span>
          <span class="kol-meter__unit">
            %
          </span>
        </span>
      </div>
      <span aria-live="polite" aria-relevant="additions text" class="visually-hidden">
        kol-live-value
      </span>
    </div>
  </template>
</kol-meter>
`;

exports[`kol-meter should render with _label="Label" _max=100 _value=10 _low=25 _high=75 _optimum=10 1`] = `
<kol-meter>
  <template shadowrootmode="open">
    <div class="kol-meter">
      <div class="kol-meter__bar">
        <div class="kol-meter__bar-label">
          Label
          <span class="kol-meter__bar-state kol-meter__bar-state--optimum">
            – kol-meter-state-optimum
          </span>
        </div>
        <div aria-label="Label" aria-valuemax="100" aria-valuemin="0" aria-valuenow="10" aria-valuetext="kol-live-value – kol-meter-state-optimum" class="kol-meter__bar-track" role="meter">
          <meter aria-hidden="true" high="75" low="25" max="100" min="0" optimum="10" value="10"></meter>
        </div>
        <span class="kol-meter__value-unit">
          <span class="kol-meter__value" style="min-width: 3ch;">
            10
          </span>
          <span class="kol-meter__unit">
            %
          </span>
        </span>
      </div>
      <span aria-live="polite" aria-relevant="additions text" class="visually-hidden">
        kol-live-value – kol-meter-state-optimum
      </span>
    </div>
  </template>
</kol-meter>
`;

exports[`kol-meter should render with _label="Label" _max=100 _value=10 _low=25 _high=75 _optimum=50 _orientation="vertical" 1`] = `
<kol-meter>
  <template shadowrootmode="open">
    <div class="kol-meter kol-meter--vertical">
      <div class="kol-meter__bar">
        <div class="kol-meter__bar-label">
          Label
          <span class="kol-meter__bar-state kol-meter__bar-state--suboptimal">
            – kol-meter-state-suboptimal
          </span>
        </div>
        <div aria-label="Label" aria-valuemax="100" aria-valuemin="0" aria-valuenow="10" aria-valuetext="kol-live-value – kol-meter-state-suboptimal" class="kol-meter__bar-track" role="meter">
          <meter aria-hidden="true" high="75" low="25" max="100" min="0" optimum="50" value="10"></meter>
        </div>
        <span class="kol-meter__value-unit">
          <span class="kol-meter__value" style="min-width: 3ch;">
            10
          </span>
          <span class="kol-meter__unit">
            %
          </span>
        </span>
      </div>
      <span aria-live="polite" aria-relevant="additions text" class="visually-hidden">
        kol-live-value – kol-meter-state-suboptimal
      </span>
    </div>
  </template>
</kol-meter>
`;

exports[`kol-meter should render with _label="Label" _max=100 _value=10 _low=25 _high=75 _optimum=50 1`] = `
<kol-meter>
  <template shadowrootmode="open">
    <div class="kol-meter">
      <div class="kol-meter__bar">
        <div class="kol-meter__bar-label">
          Label
          <span class="kol-meter__bar-state kol-meter__bar-state--suboptimal">
            – kol-meter-state-suboptimal
          </span>
        </div>
        <div aria-label="Label" aria-valuemax="100" aria-valuemin="0" aria-valuenow="10" aria-valuetext="kol-live-value – kol-meter-state-suboptimal" class="kol-meter__bar-track" role="meter">
          <meter aria-hidden="true" high="75" low="25" max="100" min="0" optimum="50" value="10"></meter>
        </div>
        <span class="kol-meter__value-unit">
          <span class="kol-meter__value" style="min-width: 3ch;">
            10
          </span>
          <span class="kol-meter__unit">
            %
          </span>
        </span>
      </div>
      <span aria-live="polite" aria-relevant="additions text" class="visually-hidden">
        kol-live-value – kol-meter-state-suboptimal
      </span>
    </div>
  </template>
</kol-meter>
`;

exports[`kol-meter should render with _label="Label" _max=100 _value=25 _orientation="vertical" 1`] = `
<kol-meter>
  <template shadowrootmode="open">
    <div class="kol-meter kol-meter--vertical">
      <div class="kol-meter__bar">
        <div class="kol-meter__bar-label">
          Label
        </div>
        <div aria-label="Label" aria-valuemax="100" aria-valuemin="0" aria-valuenow="25" aria-valuetext="kol-live-value" class="kol-meter__bar-track" role="meter">
          <meter aria-hidden="true" max="100" min="0" value="25"></meter>
        </div>
        <span class="kol-meter__value-unit">
          <span class="kol-meter__value" style="min-width: 3ch;">
            25
          </span>
          <span class="kol-meter__unit">
            %
          </span>
        </span>
      </div>
      <span aria-live="polite" aria-relevant="additions text" class="visually-hidden">
        kol-live-value
      </span>
    </div>
  </template>
</kol-meter>
`;

exports[`kol-meter should render with _label="Label" _max=100 _value=30 _low=25 _high=75 _optimum=50 1`] = `
<kol-meter>
  <template shadowrootmode="open">
    <div class="kol-meter">
      <div class="kol-meter__bar">
        <div class="kol-meter__bar-label">
          Label
          <span class="kol-meter__bar-state kol-meter__bar-state--optimum">
            – kol-meter-state-optimum
          </span>
        </div>
        <div aria-label="Label" aria-valuemax="100" aria-valuemin="0" aria-valuenow="30" aria-valuetext="kol-live-value – kol-meter-state-optimum" class="kol-meter__bar-track" role="meter">
          <meter aria-hidden="true" high="75" low="25" max="100" min="0" optimum="50" value="30"></meter>
        </div>
        <span class="kol-meter__value-unit">
          <span class="kol-meter__value" style="min-width: 3ch;">
            30
          </span>
          <span class="kol-meter__unit">
            %
          </span>
        </span>
      </div>
      <span aria-live="polite" aria-relevant="additions text" class="visually-hidden">
        kol-live-value – kol-meter-state-optimum
      </span>
    </div>
  </template>
</kol-meter>
`;

exports[`kol-meter should render with _label="Label" _max=100 _value=42 1`] = `
<kol-meter>
  <template shadowrootmode="open">
    <div class="kol-meter">
      <div class="kol-meter__bar">
        <div class="kol-meter__bar-label">
          Label
        </div>
        <div aria-label="Label" aria-valuemax="100" aria-valuemin="0" aria-valuenow="42" aria-valuetext="kol-live-value" class="kol-meter__bar-track" role="meter">
          <meter aria-hidden="true" max="100" min="0" value="42"></meter>
        </div>
        <span class="kol-meter__value-unit">
          <span class="kol-meter__value" style="min-width: 3ch;">
            42
          </span>
          <span class="kol-meter__unit">
            %
          </span>
        </span>
      </div>
      <span aria-live="polite" aria-relevant="additions text" class="visually-hidden">
        kol-live-value
      </span>
    </div>
  </template>
</kol-meter>
`;

exports[`kol-meter should render with _label="Label" _max=100 _value=50 _low=25 _high=75 _optimum=50 _orientation="vertical" 1`] = `
<kol-meter>
  <template shadowrootmode="open">
    <div class="kol-meter kol-meter--vertical">
      <div class="kol-meter__bar">
        <div class="kol-meter__bar-label">
          Label
          <span class="kol-meter__bar-state kol-meter__bar-state--optimum">
            – kol-meter-state-optimum
          </span>
        </div>
        <div aria-label="Label" aria-valuemax="100" aria-valuemin="0" aria-valuenow="50" aria-valuetext="kol-live-value – kol-meter-state-optimum" class="kol-meter__bar-track" role="meter">
          <meter aria-hidden="true" high="75" low="25" max="100" min="0" optimum="50" value="50"></meter>
        </div>
        <span class="kol-meter__value-unit">
          <span class="kol-meter__value" style="min-width: 3ch;">
            50
          </span>
          <span class="kol-meter__unit">
            %
          </span>
        </span>
      </div>
      <span aria-live="polite" aria-relevant="additions text" class="visually-hidden">
        kol-live-value – kol-meter-state-optimum
      </span>
    </div>
  </template>
</kol-meter>
`;

exports[`kol-meter should render with _label="Label" _max=100 _value=60 _orientation="vertical" 1`] = `
<kol-meter>
  <template shadowrootmode="open">
    <div class="kol-meter kol-meter--vertical">
      <div class="kol-meter__bar">
        <div class="kol-meter__bar-label">
          Label
        </div>
        <div aria-label="Label" aria-valuemax="100" aria-valuemin="0" aria-valuenow="60" aria-valuetext="kol-live-value" class="kol-meter__bar-track" role="meter">
          <meter aria-hidden="true" max="100" min="0" value="60"></meter>
        </div>
        <span class="kol-meter__value-unit">
          <span class="kol-meter__value" style="min-width: 3ch;">
            60
          </span>
          <span class="kol-meter__unit">
            %
          </span>
        </span>
      </div>
      <span aria-live="polite" aria-relevant="additions text" class="visually-hidden">
        kol-live-value
      </span>
    </div>
  </template>
</kol-meter>
`;

exports[`kol-meter should render with _label="Label" _max=100 _value=90 _low=25 _high=75 _optimum=50 _orientation="vertical" 1`] = `
<kol-meter>
  <template shadowrootmode="open">
    <div class="kol-meter kol-meter--vertical">
      <div class="kol-meter__bar">
        <div class="kol-meter__bar-label">
          Label
          <span class="kol-meter__bar-state kol-meter__bar-state--suboptimal">
            – kol-meter-state-suboptimal
          </span>
        </div>
        <div aria-label="Label" aria-valuemax="100" aria-valuemin="0" aria-valuenow="90" aria-valuetext="kol-live-value – kol-meter-state-suboptimal" class="kol-meter__bar-track" role="meter">
          <meter aria-hidden="true" high="75" low="25" max="100" min="0" optimum="50" value="90"></meter>
        </div>
        <span class="kol-meter__value-unit">
          <span class="kol-meter__value" style="min-width: 3ch;">
            90
          </span>
          <span class="kol-meter__unit">
            %
          </span>
        </span>
      </div>
      <span aria-live="polite" aria-relevant="additions text" class="visually-hidden">
        kol-live-value – kol-meter-state-suboptimal
      </span>
    </div>
  </template>
</kol-meter>
`;

exports[`kol-meter should render with _label="Label" _max=100 _value=90 _low=25 _high=75 _optimum=50 1`] = `
<kol-meter>
  <template shadowrootmode="open">
    <div class="kol-meter">
      <div class="kol-meter__bar">
        <div class="kol-meter__bar-label">
          Label
          <span class="kol-meter__bar-state kol-meter__bar-state--suboptimal">
            – kol-meter-state-suboptimal
          </span>
        </div>
        <div aria-label="Label" aria-valuemax="100" aria-valuemin="0" aria-valuenow="90" aria-valuetext="kol-live-value – kol-meter-state-suboptimal" class="kol-meter__bar-track" role="meter">
          <meter aria-hidden="true" high="75" low="25" max="100" min="0" optimum="50" value="90"></meter>
        </div>
        <span class="kol-meter__value-unit">
          <span class="kol-meter__value" style="min-width: 3ch;">
            90
          </span>
          <span class="kol-meter__unit">
            %
          </span>
        </span>
      </div>
      <span aria-live="polite" aria-relevant="additions text" class="visually-hidden">
        kol-live-value – kol-meter-state-suboptimal
      </span>
    </div>
  </template>
</kol-meter>
`;

exports[`kol-meter should render with _label="Label" _max=100 _value=90 _low=25 _high=75 _optimum=90 1`] = `
<kol-meter>
  <template shadowrootmode="open">
    <div class="kol-meter">
      <div class="kol-meter__bar">
        <div class="kol-meter__bar-label">
          Label
          <span class="kol-meter__bar-state kol-meter__bar-state--optimum">
            – kol-meter-state-optimum
          </span>
        </div>
        <div aria-label="Label" aria-valuemax="100" aria-valuemin="0" aria-valuenow="90" aria-valuetext="kol-live-value – kol-meter-state-optimum" class="kol-meter__bar-track" role="meter">
          <meter aria-hidden="true" high="75" low="25" max="100" min="0" optimum="90" value="90"></meter>
        </div>
        <span class="kol-meter__value-unit">
          <span class="kol-meter__value" style="min-width: 3ch;">
            90
          </span>
          <span class="kol-meter__unit">
            %
          </span>
        </span>
      </div>
      <span aria-live="polite" aria-relevant="additions text" class="visually-hidden">
        kol-live-value – kol-meter-state-optimum
      </span>
    </div>
  </template>
</kol-meter>
`;

exports[`kol-meter should render with _label="Label" _max=100 _value=90 _orientation="vertical" 1`] = `
<kol-meter>
  <template shadowrootmode="open">
    <div class="kol-meter kol-meter--vertical">
      <div class="kol-meter__bar">
        <div class="kol-meter__bar-label">
          Label
        </div>
        <div aria-label="Label" aria-valuemax="100" aria-valuemin="0" aria-valuenow="90" aria-valuetext="kol-live-value" class="kol-meter__bar-track" role="meter">
          <meter aria-hidden="true" max="100" min="0" value="90"></meter>
        </div>
        <span class="kol-meter__value-unit">
          <span class="kol-meter__value" style="min-width: 3ch;">
            90
          </span>
          <span class="kol-meter__unit">
            %
          </span>
        </span>
      </div>
      <span aria-live="polite" aria-relevant="additions text" class="visually-hidden">
        kol-live-value
      </span>
    </div>
  </template>
</kol-meter>
`;

exports[`kol-meter should render with _label="Label" _max=100 _value=100 1`] = `
<kol-meter>
  <template shadowrootmode="open">
    <div class="kol-meter">
      <div class="kol-meter__bar">
        <div class="kol-meter__bar-label">
          Label
        </div>
        <div aria-label="Label" aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-valuetext="kol-live-value" class="kol-meter__bar-track" role="meter">
          <meter aria-hidden="true" max="100" min="0" value="100"></meter>
        </div>
        <span class="kol-meter__value-unit">
          <span class="kol-meter__value" style="min-width: 3ch;">
            100
          </span>
          <span class="kol-meter__unit">
            %
          </span>
        </span>
      </div>
      <span aria-live="polite" aria-relevant="additions text" class="visually-hidden">
        kol-live-value
      </span>
    </div>
  </template>
</kol-meter>
`;
